kubernetes/exemplo 1/command _args.yaml
apiVersion: v1
kind: Pod
metadata:
  name: command-args-exemplo
spec:
  containers:
    - name: app
      image: nginx:1.25
      command: ["/bin/sh", "-c"]
      args: ["echo Hello Kubernetes && sleep 3600"]
