kubernetes/exemplo 1/namespace.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: desenvolvimento
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
