kubernetes/exemplo 1/restart_policy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: restart-policy-exemplo
spec:
  restartPolicy: Always
  containers:
    - name: app
      image: nginx:1.25
      ports:
        - containerPort: 80
